--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@types/styled-components": "^5.1.9",
     "nanoid": "^3.1.22",
     "react": "^18.2.0",
+    "react-dnd": "^14.0.5",
+    "react-dnd-html5-backend": "^14.1.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.2.1",
+    "throttle-debounce-ts": "^1.1.1",
     "typescript": "^4.7.4",
     "use-immer": "^0.7.0",
     "web-vitals": "^2.1.4"
